[package]
name = "ezz"
version = "0.1.1"
edition = "2021"

[profile.release]
lto = true

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
mockito = "0.31.1"
